--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMI Calculator</title>
   </head>
-  <link rel="stylesheet" href="./Calculator_Style.css" />
+  <link rel="stylesheet" href="./styles.css" />
 
   <body>
     <div class="container">
@@ -24,10 +24,10 @@
         <h3>Height and Weight</h3>
         <label for="inches">Height (m):</label>
         <input type="text" name="inches" />
-        <br />
+
         <label for="pounds">Weight (kg):</label>
         <input type="text" name="pounds" />
-        <br />
+
         <button
           type="button"
           name="calculate"
